--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "advent-of-code-template",
-  "logName": "Advent of Code Template",
+  "name": "AOC2023",
+  "logName": "Advent of Code AOC2023",
   "version": "1.0.0",
-  "description": "Advent of Code Template using Node JS for Current Year.",
+  "description": "Advent of Code AOC2023 using Node JS for Current Year.",
   "main": "run.js",
   "scripts": {
     "start": "npm run test && node run.js",
